Web Sin culminar

--- a/js/work/template/work.template.html
+++ b/js/work/template/work.template.html
@@ -7,12 +7,12 @@
                     <div class="col-md-2 list-img">
                         <!-- <img src="http://placehold.it/142x133" alt=""> -->
                         <div class="experience-date">
-                            <h6>June 2015 - <br>Present</h6>
+                            <h6>{{'work_inicio_a' | translate}} - <br>{{'work_fin_a' | translate}}</h6>
                         </div>
                         <span class="angle"></span>
                     </div>
                     <div class="col-md-10 list-description">
-                        <h6>Front End Developer <span>/ rextheme.com</span></h6>
+                        <h6>{{'work_titulo_a' | translate}} <span> <a href="http://www.sisventor.com">http://www.sisventor.com</a> </span></h6>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium magnam consectetur vel
                             in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde
                             doloremque repellendus iure, iste!</p>
@@ -22,12 +22,12 @@
                     <div class="col-md-2 list-img">
                         <!-- <img src="http://placehold.it/142x133" alt=""> -->
                         <div class="experience-date">
-                            <h6>March 2014 - <br>June 2015 </h6>
+                            <h6>{{'work_inicio_b' | translate}} - <br>{{'work_fin_b' | translate}} </h6>
                         </div>
                         <span class="angle"></span>
                     </div>
                     <div class="col-md-10 list-description">
-                        <h6>UI/UX Designer <span>/ envato market palce</span></h6>
+                        <h6>{{'work_titulo_b' | translate}} <span> https://www.urbe.edu   ^  https://www.urbeinternacional.com</span></h6>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium magnam consectetur vel
                             in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde
                             doloremque repellendus iure, iste!</p>
@@ -37,12 +37,12 @@
                     <div class="col-md-2 list-img">
                         <!-- <img src="http://placehold.it/142x133" alt=""> -->
                         <div class="experience-date">
-                            <h6>Jan 2013 - <br>March 2014</h6>
+                            <h6>{{'work_inicio_c' | translate}} - <br>{{'work_fin_c' | translate}}</h6>
                         </div>
                         <span class="angle"></span>
                     </div>
                     <div class="col-md-10 list-description">
-                        <h6>Web Developer <span>/ apprex.com</span></h6>
+                        <h6>{{'work_titulo_c' | translate}} <span> http://www.urbe.edu</span></h6>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium magnam consectetur vel
                             in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde
                             doloremque repellendus iure, iste!</p>
@@ -52,12 +52,12 @@
                     <div class="col-md-2 list-img">
                         <!-- <img src="http://placehold.it/142x133" alt=""> -->
                         <div class="experience-date">
-                            <h6>June 2015 - <br>Present</h6>
+                            <h6>{{'work_inicio_d' | translate}} - <br>{{'work_fin_d' | translate}}</h6>
                         </div>
                         <span class="angle"></span>
                     </div>
                     <div class="col-md-10 list-description">
-                        <h6>Front End Developer <span>/ rextheme.com</span></h6>
+                        <h6>{{'work_titulo_d' | translate}} <span> https://www.workana.com</span></h6>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium magnam consectetur vel
                             in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde
                             doloremque repellendus iure, iste!</p>
@@ -67,12 +67,12 @@
                     <div class="col-md-2 list-img">
                         <!-- <img src="http://placehold.it/142x133" alt=""> -->
                         <div class="experience-date">
-                            <h6>June 2015 - <br>Present</h6>
+                            <h6>{{'work_inicio_e' | translate}} - <br>{{'work_fin_e' | translate}}</h6>
                         </div>
                         <span class="angle"></span>
                     </div>
                     <div class="col-md-10 list-description">
-                        <h6>Front End Developer <span>/ rextheme.com</span></h6>
+                        <h6>{{'work_titulo_e' | translate}} <span> Instituto de Formacion Profesional </span></h6>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium magnam consectetur vel
                             in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde
                             doloremque repellendus iure, iste!</p>
@@ -82,12 +82,12 @@
                     <div class="col-md-2 list-img">
                         <!-- <img src="http://placehold.it/142x133" alt=""> -->
                         <div class="experience-date">
-                            <h6>June 2015 - <br>Present</h6>
+                            <h6>{{'work_inicio_f' | translate}} - <br>{{'work_fin_f' | translate}}</h6>
                         </div>
                         <span class="angle"></span>
                     </div>
                     <div class="col-md-10 list-description">
-                        <h6>Front End Developer <span>/ rextheme.com</span></h6>
+                        <h6>{{'work_titulo_f' | translate}} <span> http://cidcitei.com</span></h6>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium magnam consectetur vel
                             in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde
                             doloremque repellendus iure, iste!</p>
@@ -97,12 +97,12 @@
                     <div class="col-md-2 list-img">
                         <!-- <img src="http://placehold.it/142x133" alt=""> -->
                         <div class="experience-date">
-                            <h6>June 2015 - <br>Present</h6>
+                            <h6>{{'work_inicio_g' | translate}} - <br>{{'work_fin_g' | translate}}</h6>
                         </div>
                         <span class="angle"></span>
                     </div>
                     <div class="col-md-10 list-description">
-                        <h6>Front End Developer <span>/ rextheme.com</span></h6>
+                        <h6>{{'work_titulo_g' | translate}} <span> Omerca C.A  http://www.agfahealthcare.com/</span></h6>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium magnam consectetur vel
                             in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde
                             doloremque repellendus iure, iste!</p>
@@ -112,12 +112,12 @@
                     <div class="col-md-2 list-img">
                         <!-- <img src="http://placehold.it/142x133" alt=""> -->
                         <div class="experience-date">
-                            <h6>June 2015 - <br>Present</h6>
+                            <h6>{{'work_inicio_h' | translate}} - <br>{{'work_fin_h' | translate}}</h6>
                         </div>
                         <span class="angle"></span>
                     </div>
                     <div class="col-md-10 list-description">
-                        <h6>Front End Developer <span>/ rextheme.com</span></h6>
+                        <h6>{{'work_titulo_h' | translate}} <span> Instututo las Americas Venezuela </span></h6>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium magnam consectetur vel
                             in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde
                             doloremque repellendus iure, iste!</p>
@@ -127,12 +127,12 @@
                     <div class="col-md-2 list-img">
                         <!-- <img src="http://placehold.it/142x133" alt=""> -->
                         <div class="experience-date">
-                            <h6>June 2015 - <br>Present</h6>
+                            <h6>{{'work_inicio_i' | translate}} - <br>{{'work_fin_i' | translate}}</h6>
                         </div>
                         <span class="angle"></span>
                     </div>
                     <div class="col-md-10 list-description">
-                        <h6>Front End Developer <span>/ rextheme.com</span></h6>
+                        <h6>{{'work_titulo_i' | translate}} <span> Instututo las Americas Venezuela</span></h6>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium magnam consectetur vel
                             in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde
                             doloremque repellendus iure, iste!</p>
@@ -142,12 +142,12 @@
                     <div class="col-md-2 list-img">
                         <!-- <img src="http://placehold.it/142x133" alt=""> -->
                         <div class="experience-date">
-                            <h6>June 2015 - <br>Present</h6>
+                            <h6>{{'work_inicio_j' | translate}} - <br>{{'work_fin_j' | translate}}</h6>
                         </div>
                         <span class="angle"></span>
                     </div>
                     <div class="col-md-10 list-description">
-                        <h6>Front End Developer <span>/ rextheme.com</span></h6>
+                        <h6>{{'work_titulo_j' | translate}} <span> Internet Remote Assistant</span></h6>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium magnam consectetur vel
                             in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde
                             doloremque repellendus iure, iste!</p>
