--- a/js/education/template/education.template.html
+++ b/js/education/template/education.template.html
@@ -1,42 +1,16 @@
 <div id="education" class="active-section">
     <div class="section-block education">
-        <h4 class="title">Education</h4>
+        <h4 class="title">{{'education'|translate}}</h4>
         <div class="row">
             <div id="rex-education-slider">
-                <div class="listing-content">
-                    <div class="col-md-2 list-img">
-                        <img src="img/education/education-img1.jpg" alt="">
-                    </div>
-                    <div class="col-md-10 list-description">
-                        <h6>University of Computer Science</h6>
-                        <span>Faculty of Computer Science, Information System, 2011 - present</span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium magnam consectetur vel
-                            in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde
-                            doloremque repellendus iure, iste!</p>
-                    </div>
-                </div>
                 <div class="listing-content">
                     <div class="col-md-2 list-img">
                         <img src="img/education/education-img2.jpg" alt="">
                     </div>
                     <div class="col-md-10 list-description">
-                        <h6>University of Fine Arts</h6>
-                        <span>Faculty of Fine Arts, 2008-2010</span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium magnam consectetur vel
-                            in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde
-                            doloremque repellendus iure, iste!</p>
-                    </div>
-                </div>
-                <div class="listing-content">
-                    <div class="col-md-2 list-img">
-                        <img src="img/education/education-img3.jpg" alt="">
-                    </div>
-                    <div class="col-md-10 list-description">
-                        <h6>School of Graphic Design</h6>
-                        <span>Envato School of Design , 2002 - 2008</span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium magnam consectetur vel
-                            in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde
-                            doloremque repellendus iure, iste!</p>
+                        <h6>{{'educacion_titulo_a' | translate}}</h6>
+                        <span>{{'educacion_subtitulo_a' | translate}}</span>
+                        <p>{{'educacion_desc_a' | translate}}</p>
                     </div>
                 </div>
             </div>
