--- a/views/commun/footer.html
+++ b/views/commun/footer.html
@@ -3,7 +3,7 @@
         <footer>
             <div class="row">
                 <div class="col-md-12">
-                    <p>&copy; Copyright 2016 Jordan</p>
+                    <p>&copy; Copyright 2016 Eddie Master</p>
                 </div>
             </div>
         </footer>
