--- a/views/commun/header.html
+++ b/views/commun/header.html
@@ -43,7 +43,7 @@
 
     <div class="hero">
         <div class="fondo">
-            <video autoplay="" loop="" muted="" style="margin-left: 2.5%;margin-top: -7%;">
+            <video autoplay="" loop="" muted="" style="margin-top: -10%;width: 100%;">
                 <source src="img/fondo.mp4" type="video/mp4">
             </video>
             <!-- <a href="" class="hero-logo"><img src="img/profile-img.png" alt="Logo Image"></a> -->
