Ajuste del diseño. y traduccion

--- a/js/work/template/work.template.html
+++ b/js/work/template/work.template.html
@@ -1,6 +1,6 @@
 <div id="experience" class="active-section">
     <div class="section-block experience">
-        <h4 class="title">Work Experience</h4>
+        <h4 class="title">{{'work_title'|translate}}</h4>
         <div class="row">
             <div id="rex-experience-slider">
                 <div class="listing-content">
@@ -13,9 +13,7 @@
                     </div>
                     <div class="col-md-10 list-description">
                         <h6>{{'work_titulo_a' | translate}} <span> <a href="http://www.sisventor.com">http://www.sisventor.com</a> </span></h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium magnam consectetur vel
-                            in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde
-                            doloremque repellendus iure, iste!</p>
+                        <p>{{'work_desc_a'|translate}}</p>
                     </div>
                 </div>
                 <div class="listing-content">
@@ -28,9 +26,7 @@
                     </div>
                     <div class="col-md-10 list-description">
                         <h6>{{'work_titulo_b' | translate}} <span> https://www.urbe.edu   ^  https://www.urbeinternacional.com</span></h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium magnam consectetur vel
-                            in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde
-                            doloremque repellendus iure, iste!</p>
+                        <p>{{'work_desc_b'|translate}}</p>
                     </div>
                 </div>
                 <div class="listing-content">
@@ -43,9 +39,7 @@
                     </div>
                     <div class="col-md-10 list-description">
                         <h6>{{'work_titulo_c' | translate}} <span> http://www.urbe.edu</span></h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium magnam consectetur vel
-                            in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde
-                            doloremque repellendus iure, iste!</p>
+                        <p>{{'work_desc_c' | translate}}</p>
                     </div>
                 </div>
                 <div class="listing-content">
@@ -58,9 +52,7 @@
                     </div>
                     <div class="col-md-10 list-description">
                         <h6>{{'work_titulo_d' | translate}} <span> https://www.workana.com</span></h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium magnam consectetur vel
-                            in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde
-                            doloremque repellendus iure, iste!</p>
+                        <p>{{'work_desc_d' | translate}}</p>
                     </div>
                 </div>
                 <div class="listing-content">
@@ -73,9 +65,7 @@
                     </div>
                     <div class="col-md-10 list-description">
                         <h6>{{'work_titulo_e' | translate}} <span> Instituto de Formacion Profesional </span></h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium magnam consectetur vel
-                            in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde
-                            doloremque repellendus iure, iste!</p>
+                        <p>{{'work_desc_e' | translate}}</p>
                     </div>
                 </div>
                 <div class="listing-content">
@@ -88,9 +78,7 @@
                     </div>
                     <div class="col-md-10 list-description">
                         <h6>{{'work_titulo_f' | translate}} <span> http://cidcitei.com</span></h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium magnam consectetur vel
-                            in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde
-                            doloremque repellendus iure, iste!</p>
+                        <p>{{'work_desc_f' | translate}}</p>
                     </div>
                 </div>
                 <div class="listing-content">
@@ -103,9 +91,7 @@
                     </div>
                     <div class="col-md-10 list-description">
                         <h6>{{'work_titulo_g' | translate}} <span> Omerca C.A  http://www.agfahealthcare.com/</span></h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium magnam consectetur vel
-                            in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde
-                            doloremque repellendus iure, iste!</p>
+                        <p>{{'work_desc_g' | translate}}</p>
                     </div>
                 </div>
                 <div class="listing-content">
@@ -118,9 +104,7 @@
                     </div>
                     <div class="col-md-10 list-description">
                         <h6>{{'work_titulo_h' | translate}} <span> Instututo las Americas Venezuela </span></h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium magnam consectetur vel
-                            in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde
-                            doloremque repellendus iure, iste!</p>
+                        <p>{{'work_desc_h' | translate}}</p>
                     </div>
                 </div>
                 <div class="listing-content">
@@ -133,9 +117,7 @@
                     </div>
                     <div class="col-md-10 list-description">
                         <h6>{{'work_titulo_i' | translate}} <span> Instututo las Americas Venezuela</span></h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium magnam consectetur vel
-                            in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde
-                            doloremque repellendus iure, iste!</p>
+                        <p>{{'work_desc_i' | translate}}</p>
                     </div>
                 </div>
                 <div class="listing-content">
@@ -148,9 +130,7 @@
                     </div>
                     <div class="col-md-10 list-description">
                         <h6>{{'work_titulo_j' | translate}} <span> Internet Remote Assistant</span></h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium magnam consectetur vel
-                            in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde
-                            doloremque repellendus iure, iste!</p>
+                        <p>{{'work_desc_j' | translate}}</p>
                     </div>
                 </div>
             </div>
