--- a/js/skills/template/skills.template.html
+++ b/js/skills/template/skills.template.html
@@ -4,17 +4,16 @@
             <div class="col-md-6">
                 <div class="skill-content">
                     <h3 class="title">{{'skills_habilidades'| translate}}</h3>
-
                     <h4>{{'skills_os'|translate}}</h4>
                     <span class="border-dashed"></span>
                     <h6>Ubuntu Server</h6>
-                    <div class="skillbar clearfix " data-percent="90%">
+                    <div class="skillbar clearfix " data-percent="70%">
                         <div class="skillbar-bar"></div>
                         <div class="skill-bar-percent">70%</div>
                     </div> <!-- End Skill Bar -->
 
                     <h6>Windows Server</h6>
-                    <div class="skillbar clearfix " data-percent="90%">
+                    <div class="skillbar clearfix " data-percent="70%">
                         <div class="skillbar-bar"></div>
                         <div class="skill-bar-percent">70%</div>
                     </div> <!-- End Skill Bar -->
@@ -60,27 +59,15 @@
                         <div class="skill-bar-percent">75%</div>
                     </div> <!-- End Skill Bar -->
 
-                    <h4>{{'skills_servidor'|translate}}</h4>
-                    <span class="border-dashed"></span>
 
-                    <h6>Apache2</h6>
-                    <div class="skillbar clearfix " data-percent="80%">
-                        <div class="skillbar-bar"></div>
-                        <div class="skill-bar-percent">80%</div>
-                    </div> <!-- End Skill Bar -->
 
-                    <h6>Nginx</h6>
-                    <div class="skillbar clearfix " data-percent="50%">
-                        <div class="skillbar-bar"></div>
-                        <div class="skill-bar-percent">50%</div>
-                    </div> <!-- End Skill Bar -->
 
-                    <h6>IIS</h6>
-                    <div class="skillbar clearfix " data-percent="40%">
-                        <div class="skillbar-bar"></div>
-                        <div class="skill-bar-percent">40%</div>
-                    </div> <!-- End Skill Bar -->
 
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="skill-content">
+                    <h3 class="title">...</h3>
                     <h4>{{'skills_db' | translate}}</h4>
                     <span class="border-dashed"></span>
 
@@ -114,13 +101,28 @@
                         <div class="skillbar-bar"></div>
                         <div class="skill-bar-percent">60%</div>
                     </div> <!-- End Skill Bar -->
+                    <h4>{{'skills_servidor'|translate}}</h4>
+                    <span class="border-dashed"></span>
 
+                    <h6>Apache2</h6>
+                    <div class="skillbar clearfix " data-percent="80%">
+                        <div class="skillbar-bar"></div>
+                        <div class="skill-bar-percent">80%</div>
+                    </div> <!-- End Skill Bar -->
+
+                    <h6>Nginx</h6>
+                    <div class="skillbar clearfix " data-percent="50%">
+                        <div class="skillbar-bar"></div>
+                        <div class="skill-bar-percent">50%</div>
+                    </div> <!-- End Skill Bar -->
+
+                    <h6>IIS</h6>
+                    <div class="skillbar clearfix " data-percent="40%">
+                        <div class="skillbar-bar"></div>
+                        <div class="skill-bar-percent">40%</div>
+                    </div> <!-- End Skill Bar -->
 
                 </div>
-            </div>
-            <div class="col-md-6">
-                <img class="img-responsive" src="img/skill/skills.jpg"
-                     style="height: 100%; margin-top: 65%; margin-left: -7%" alt="">
             </div>
         </div>
     </div>
