--- a/js/education/template/education.template.html
+++ b/js/education/template/education.template.html
@@ -1,6 +1,6 @@
 <div id="education" class="active-section">
     <div class="section-block education">
-        <h4 class="title">{{'education'|translate}}</h4>
+        <h4 class="title">{{'educacion'|translate}}</h4>
         <div class="row">
             <div id="rex-education-slider">
                 <div class="listing-content">
