Ajuste del diseño. y traduccion

--- a/css/style.css
+++ b/css/style.css
@@ -7078,7 +7078,9 @@ footer {
     width: 90%;
     max-width: 960px; }
     .rex-portfolio-showcase .rex-modal .rex-content {
-      position: relative; }
+      position: relative;
+    margin-top: -57%;
+    }
       .rex-portfolio-showcase .rex-modal .rex-content img {
         padding-left: 40px; }
     .rex-portfolio-showcase .rex-modal button.rex-close-modal {
