--- a/js/jobs/template/jobs.template.html
+++ b/js/jobs/template/jobs.template.html
@@ -1,14 +1,11 @@
 <div class="active-section" id="work">
     <div class="portfolio-section box-border rex-works-showcase">
         <div class="row rex-portfolio-showcase">
-            <h4 class="title">Work</h4>
+            <h4 class="title">{{'job'|translate}}</h4>
             <div class="row">
                 <div class="portfolio-menu">
                     <div class="col-md-12 portfolio-filter rex-filter-btns">
-                        <div class="btn btn-default filter" data-filter="all">All</div>
-                        <div class="btn btn-default filter" data-filter="identity">Branding</div>
-                        <div class="btn btn-default filter" data-filter="photography">Photography</div>
-                        <div class="btn btn-default filter" data-filter="ui">Illutration</div>
+
                     </div>
                 </div>
             </div>
@@ -22,14 +19,10 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="rex-featured-description">
-                                    <h6>Recent Project</h6>
-                                    <span>Branding, Photography</span>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora itaque cum
-                                        quaerat facere est commodi delectus dicta impedit ipsum vero quod quo eligendi,
-                                        blanditiis quia alias tenetur neque nesciunt, totam?</p>
-                                    <p>On the other hand, we denounce with righteous indignation and dislike men wh
-                                        are so beguiled and demoralized by the charms of pleasure of the moment, so
-                                        blinded by desire.</p>
+                                    <h6>{{'job_titulo_a'|translate}}</h6>
+                                  <a href="http://www.sisventor.com/web2016/#/ventor_sales">
+                                      <span>Ventor Sales</span> </a>
+                                    <p>{{'job_desc_a'|translate}}</p>
                                 </div>
                             </div>
                         </div>
@@ -45,12 +38,9 @@
                     </div>
                     <figcaption class="rex-featured-description">
                         <div class="rex-portfolios-title">
-                            <h6>Recent Project</h6>
-                            <span>Branding, Photography</span>
+                            <h6>{{'job_titulo_b'|translate}}</h6>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora itaque cum quaerat facere
-                            est commodi delectus dicta impedit ipsum vero quod quo eligendi, blanditiis quia alias
-                            tenetur neque nesciunt, totam?</p>
+                        <p>{{'job_desc_b'|translate}}</p>
                     </figcaption>
                 </figure>
 
@@ -60,12 +50,9 @@
                     </div>
                     <figcaption class="rex-featured-description">
                         <div class="rex-portfolios-title">
-                            <h6>Recent Project</h6>
-                            <span>Branding, Photography</span>
+                            <h6>{{'job_titulo_c'|translate}}</h6>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora itaque cum quaerat facere
-                            est commodi delectus dicta impedit ipsum vero quod quo eligendi, blanditiis quia alias
-                            tenetur neque nesciunt, totam?</p>
+                        <p>{{'job_desc_c'|translate}}</p>
                     </figcaption>
                 </figure>
 
