--- a/js/work/template/work.template.html
+++ b/js/work/template/work.template.html
@@ -103,7 +103,7 @@
                         <span class="angle"></span>
                     </div>
                     <div class="col-md-10 list-description">
-                        <h6>{{'work_titulo_h' | translate}} <span> Instututo las Americas Venezuela </span></h6>
+                        <h6>{{'work_titulo_h' | translate}} <span> Instituto las Americas Venezuela </span></h6>
                         <p>{{'work_desc_h' | translate}}</p>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
                         <span class="angle"></span>
                     </div>
                     <div class="col-md-10 list-description">
-                        <h6>{{'work_titulo_i' | translate}} <span> Instututo las Americas Venezuela</span></h6>
+                        <h6>{{'work_titulo_i' | translate}} <span> Instituto las Americas Venezuela</span></h6>
                         <p>{{'work_desc_i' | translate}}</p>
                     </div>
                 </div>
