--- a/views/commun/header.html
+++ b/views/commun/header.html
@@ -51,7 +51,7 @@
                 <div class="col-md-8 col-md-offset-3" style="margin-top: -45%;">
                     <span class="col-md-2 top-title"><sup>Function</sup></span>
                     <div class="header-three-style col-md-10">
-                        <h2 class="author-name" style="color: white;">Eddie Mejia(){ </h2>
+                        <h2 class="author-name" style="color: white;">Eddie Master(){ </h2>
                         <h4 class="sub-title"><span id="typeText" style="margin-top: 2%;"></span></h4>
                         <h2 class="author-name" style="color: white;">}</h2>
                         <div class="hero-btn">
