Ajuste del diseño. y traduccion

--- a/js/about/template/about.html
+++ b/js/about/template/about.html
@@ -67,6 +67,26 @@
                                     </div>
                                 </div>
                             </li>
+                            <li class="list-group-item">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <h6>{{'about_correo' | translate}}</h6>
+                                </div>
+                                <div class="col-md-8">
+                                    <p>EddieJoel19@gmail.com</p>
+                                </div>
+                            </div>
+                        </li>
+                            <li class="list-group-item">
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <h6>{{'about_telf' | translate}}</h6>
+                                    </div>
+                                    <div class="col-md-8">
+                                        <p>{{'about_cell'|translate}}</p>
+                                    </div>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                 </div>
