--- a/js/jobs/template/jobs.template.html
+++ b/js/jobs/template/jobs.template.html
@@ -62,12 +62,9 @@
                     </div>
                     <figcaption class="rex-featured-description">
                         <div class="rex-portfolios-title">
-                            <h6>Recent Project</h6>
-                            <span>Branding, Photography</span>
+                            <h6>{{'job_titulo_d'|translate}}</h6>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora itaque cum quaerat facere
-                            est commodi delectus dicta impedit ipsum vero quod quo eligendi, blanditiis quia alias
-                            tenetur neque nesciunt, totam?</p>
+                        <p>{{'job_desc_d'|translate}}</p>
                     </figcaption>
                 </figure>
 
@@ -78,12 +75,9 @@
                     </div>
                     <figcaption class="rex-featured-description">
                         <div class="rex-portfolios-title">
-                            <h6>Recent Project</h6>
-                            <span>Branding, Photography</span>
+                            <h6>{{'job_titulo_e'|translate}}</h6>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora itaque cum quaerat facere
-                            est commodi delectus dicta impedit ipsum vero quod quo eligendi, blanditiis quia alias
-                            tenetur neque nesciunt, totam?</p>
+                        <p>{{'job_desc_e'|translate}}</p>
                     </figcaption>
                 </figure>
 
@@ -93,12 +87,9 @@
                     </div>
                     <figcaption class="rex-featured-description">
                         <div class="rex-portfolios-title">
-                            <h6>Recent Project</h6>
-                            <span>Branding, Photography</span>
+                            <h6>{{'job_titulo_f'|translate}}</h6>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora itaque cum quaerat facere
-                            est commodi delectus dicta impedit ipsum vero quod quo eligendi, blanditiis quia alias
-                            tenetur neque nesciunt, totam?</p>
+                        <p>{{'job_desc_f'|translate}}</p>
                     </figcaption>
                 </figure>
 
@@ -108,12 +99,9 @@
                     </div>
                     <figcaption class="rex-featured-description">
                         <div class="rex-portfolios-title">
-                            <h6>Recent Project</h6>
-                            <span>Branding, Photography</span>
+                            <h6>{{'job_titulo_g'|translate}}</h6>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora itaque cum quaerat facere
-                            est commodi delectus dicta impedit ipsum vero quod quo eligendi, blanditiis quia alias
-                            tenetur neque nesciunt, totam?</p>
+                        <p>{{'job_desc_g'|translate}}</p>
                     </figcaption>
                 </figure>
 
