--- a/views/commun/header.html
+++ b/views/commun/header.html
@@ -48,14 +48,14 @@
             </video>
             <!-- <a href="" class="hero-logo"><img src="img/profile-img.png" alt="Logo Image"></a> -->
             <div class="hero-copy container">
-                <div class="col-md-8 col-md-offset-3" style="margin-top: -45%;">
+                <div class="col-md-8 col-md-offset-3" style="margin-top: -60%;">
                     <span class="col-md-2 top-title"><sup>Function</sup></span>
                     <div class="header-three-style col-md-10">
                         <h2 class="author-name" style="color: white;">Eddie Master(){ </h2>
                         <h4 class="sub-title"><span id="typeText" style="margin-top: 2%;"></span></h4>
                         <h2 class="author-name" style="color: white;">}</h2>
                         <div class="hero-btn">
-                            <a class="btn btn-default rex-primary-btn-effect" href="#" role="button">{{'menu_boton_cv' | translate}}</a>
+                            <!--<a class="btn btn-default rex-primary-btn-effect" role="button">{{'menu_boton_cv' | translate}}</a>-->
                         </div>
                     </div>
                 </div>
